Bouton de fermeture de la boite de dialogue d'ajout/édition de référence

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -9,7 +9,8 @@
     "add": "Ajouter",
     "download": "Télécharger",
     "edit": "Modifier",
-    "delete": "Supprimer"
+    "delete": "Supprimer",
+    "close": "Fermer"
   },
   "nav": {
     "application": "Application",
