--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,7 +9,8 @@
     "add": "Add",
     "download": "Download",
     "edit": "Edit",
-    "delete": "Delete"
+    "delete": "Delete",
+    "close": "Close"
   },
   "nav": {
     "application": "Application",
