Mise à jours des locales et stylisation du visualiseur

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -65,6 +65,9 @@
       "keyColumn": "Key column"
     }
   },
+  "visualization": {
+    "title": "Visualization"
+  },
   "download": {
     "title": "Download",
     "subtitle": "You can download your application configuration file!"
