--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -10,7 +10,8 @@
     "download": "Télécharger",
     "edit": "Modifier",
     "delete": "Supprimer",
-    "close": "Fermer"
+    "close": "Fermer",
+    "dataType": "Type de données"
   },
   "nav": {
     "application": "Application",
@@ -63,6 +64,22 @@
       "columnName": "Nom de la colonne",
       "placeholder": "esp_nom,  ...",
       "keyColumn": "Colonne clé"
+    }
+  },
+  "dataTypes": {
+    "title": "Types de données",
+    "table": {
+      "dataTypeName": "Nom du type de données"
+    },
+    "form": {
+      "fr": {
+        "label": "Nom du type de données en français",
+        "placeholder": "Piégeage en Montée, ..."
+      },
+      "en": {
+        "label": "Du type de données en anglais",
+        "placeholder": "Trap in ascent, ..."
+      }
     }
   },
   "visualization": {
