--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -20,6 +20,7 @@
   },
   "rule": {
     "required": "Ce champ est obligatoire",
+    "length": "La longueur de ce champ doit être inférieur à {length} caractères",
     "columnRequired": "Veuillez ajouter au moins une colonne",
     "columnSelected": "Veuillez sélectionner au moins une colonne"
   },
