Amélioration de la popup d'ajout d'une référence

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -64,6 +64,9 @@
     "deleteRow": "Delete row"
   },
   "reference": {
+    "title": "Add a reference",
+    "nameSubtitle": "Name of the reference",
+    "columnSubtitle": "Add a column",
     "label": "Name of the reference in {1}",
     "frReferencePlaceholder": "Espèces, ...",
     "enReferencePlaceholder": "Species, ...",
