--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -22,7 +22,8 @@
     "required": "Ce champ est obligatoire",
     "length": "La longueur de ce champ doit être inférieur à {length} caractères",
     "columnRequired": "Veuillez ajouter au moins une colonne",
-    "columnSelected": "Veuillez sélectionner au moins une colonne"
+    "columnSelected": "Veuillez sélectionner au moins une colonne",
+    "columnAlreadyExist": "Cette colonne existe déjà"
   },
   "alert": {
     "info": "Informations",
@@ -65,15 +66,25 @@
   },
   "reference": {
     "title": "Ajouter un référentiel",
-    "nameSubtitle": "Nom du référentiel",
-    "columnSubtitle": "Ajouter une colonne",
-    "label": "Nom du référentiel en {0}",
-    "frReferencePlaceholder": "Espèces, ...",
-    "enReferencePlaceholder": "Species, ...",
-    "columnName": "Nom de la colonne en {0}",
-    "frColumnPlaceholder": "esp_nom,  ...",
-    "enColumnPlaceholder": "spe_name,  ...",
-    "keyColumn": "Colonne clé"
+    "name": "Nom du référentiel {0}",
+    "frPlaceholder": "Espèces, ...",
+    "enPlaceholder": "Species, ...",
+    "columns": "Colonnes",
+    "keyColumn": "Colonne clé",
+    "column": {
+      "subtitle": "Ajouter une colonne",
+      "name": "Nom de la colonne {0}",
+      "frPlaceholder": "esp_nom,  ...",
+      "enPlaceholder": "spe_name,  ..."
+    },
+    "constraint": {
+      "subtitle": "Ajouter une contrainte",
+      "name": "Nom de la contrainte {0}",
+      "frPlaceholder": "Référence au projet,  ...",
+      "enPlaceholder": "Project reference,  ...",
+      "type": "Type de contrainte",
+      "selected": "Colonnes sélectionnées"
+    }
   },
   "dataTypes": {
     "title": "Types de données",
