--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -31,7 +31,9 @@
     "references": "References are a set of information used to specify the context of the measurement or observation. To describe a reference, we list the names of the desired columns and specify the list of columns that form the natural key.",
     "dataTypes": "Type de données",
     "visualization": "Visualisation",
-    "download": "Télécharger"
+    "download": "Télécharger",
+    "action": "Action impossible",
+    "column": "Unable to delete this column because it is referenced in a constraint"
   },
   "nav": {
     "application": "Application",
@@ -69,7 +71,6 @@
     "referenceName": "Reference's name {0}",
     "frPlaceholder": "Espèces, ...",
     "enPlaceholder": "Species, ...",
-    "columns": "Columns",
     "keyColumn": "Key column",
     "column": {
       "subtitle": "Add a column",
