Corrections des tests et de divers bug

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -70,7 +70,7 @@
   },
   "reference": {
     "title": "Ajouter un référentiel",
-    "name": "Nom du référentiel",
+    "name": "Nom du référentiel {0}",
     "frPlaceholder": "Espèces, ...",
     "enPlaceholder": "Species, ...",
     "keyColumn": "Colonne clé",
